Changelog for plone.intelligenttext

    (name of developer listed in brackets)

plone.intelligenttext - 1.0.1 Released December 4, 2007

    - Accept ip addresses as valid urls.
      [maurits]

    - Accept localhost as valid url.
      [maurits]

    - Recognize urls with port numbers as links.
      Fixes http://plone.org/products/poi/issues/156
      [maurits]

    - If there is a url in brackets, the link should not contain one
      of the brackets.
      Fixes http://plone.org/products/poi/issues/155 
      [maurits]

    - Fix error where ampersands in urls would get html escaped.
      Refs http://plone.org/products/poi/issues/101
      [maurits]

    - Accept input of None to our transforms.
      [maurits]

    - Add unit tests (mostly taken from Products.intelligenttext)
      [maurits]

plone.intelligenttext - 1.0

    - released version 1.0
      [diefenbach]

plone.intelligenttext - 1.0b2

    - Some documentation cleanup.
      [hannosch]

plone.intelligenttext - 1.0-beta1

    - move into plone namespace and integration to PloneTransforms and 
      MimetypesRegistry
      [diefenbach]
    
plone.intelligenttext - 0.1

    - Initial development by Martin Aspeli (optilude@gmx.net). For further 
      informations see http://dev.plone.org/collective/browser/intelligenttext/

    - The transform was originally based on the url_to_hyperlink transform from
      Ploneboard by Plone Solutions and others.
 
    - Initial package structure.
      [zopeskel]